# devilutionx-gamelist

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bot_db.py  commands.py  config.json  discord_bot.json.template  discord_bot.py  game_manager.py  main.cpp  mypy.ini  pyproject.toml  requirements.txt  run_bot.sh  statistics.json  stats.py  utils.py  ztapi_client.py
.github/workflows/: linux.tml  linux.yml  mypy.yml  python.yml  windows.yml
